Pom repositroy update

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
     <!-- FIXME change it to the project's website -->
     <url>https://www.volcengine.com/</url>
 
+    <repositories>
+        <repository>
+            <id>aliyun</id>
+            <url>https://maven.aliyun.com/repository/public</url>
+        </repository>
+    </repositories>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
