--- a/middleware-rmq/pom.xml
+++ b/middleware-rmq/pom.xml
@@ -14,6 +14,13 @@
     <name>middleware-rmq</name>
     <description>Demo project for Spring Boot</description>
 
+    <repositories>
+        <repository>
+            <id>aliyun</id>
+            <url>https://maven.aliyun.com/repository/public</url>
+        </repository>
+    </repositories>
+
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>2021.0.4</spring-cloud.version>
